gcc/testsuite/rust/rustc/ui/codemap_tests/huge_multispan_highlight.rs
fn main() {
    let x = "foo";























































































    let y = &mut x; // { dg-error ".E0596." "" { target *-*-* } }
}

